samples/_failures_safe/1761331579_897035_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b93bb0d7.c: In function ‘read_sample_logs’:
./samples/SAFE/__tmp_b93bb0d7.c:136:5: error: expected expression at end of input
  136 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_b93bb0d7.c:136:5: error: expected declaration or statement at end of input
